# clushible

./: .gitignore  README.md  clushible  clushible-sample-wrapper  clushible.orig  local.toml  pyproject.toml  requirements.txt
ClushibleApp/: Clushible.py  __init__.py  clushible.py
ClushibleApp/config/: Config.py  __init__.py  cli.py  config_opts.toml  defaults.py  file.py  final.py  options.toml
ClushibleApp/utils/: __init__.py  ansible.py  dispatch.py  msg.py
cli/: cli.py  utils.py
etc/: clushible.toml
example_configs/: clushible.toml  gust.toml  new_conf.dump.toml  new_conf.local.toml
old/cli/: __init__.py  config.py  utils.py
